--- a/tarea9/comment.css
+++ b/tarea9/comment.css
@@ -1,10 +1,4 @@
-/**
- * Oscuro: #283035
- * Azul: #03658c
- * Detalle: #c7cacb
- * Fondo: #dee1e3
- ----------------------------------*/
- * {
+ {
      margin: 0;
  	padding: 0;
  	-webkit-box-sizing: border-box;
@@ -22,7 +16,7 @@ ul {
 }
 
 body {
-	font-family: 'Roboto', Arial, Helvetica, Sans-serif, Verdana;
+	font-family: 'Times new roman', Arial, Helvetica, Sans-serif, Verdana;
 	background: #dee1e3;
 }
 
@@ -50,9 +44,7 @@ body {
 	position: relative;
 }
 
-/**
- * Lineas / Detalles
- -----------------------*/
+
 .comments-list:before {
 	content: '';
 	width: 2px;
@@ -108,9 +100,7 @@ body {
 	clear: both;
 	margin-top: 15px;
 }
-/**
- * Avatar
- ---------------------------*/
+
 .comments-list .comment-avatar {
 	width: 65px;
 	height: 65px;
@@ -144,9 +134,7 @@ body {
 	display: block;
 	clear: both;
 }
-/**
- * Caja del Comentario
- ---------------------------*/
+
 .comments-list .comment-box {
 	width: 680px;
 	float: right;
@@ -248,9 +236,7 @@ body {
 	border-radius: 3px;
 }
 
-/** =====================
- * Responsive
- ========================*/
+
 @media only screen and (max-width: 766px) {
 	.comments-container {
 		width: 480px;
